# SOFT_Integration

./: README.md
01_Misc/: getgoogle.html  paymentiframe.html
02_Data_Files/: data_parser.py  me.csv  me.json  me.txt  me.xml  me.yaml
02_Date_Files/: me.json  me.xml  me.yaml
03_Moduels/html_with_modules/: index.html  mymoduels.js
03_Moduels/node_commonjs_moduels/: index.js  myModule.js
04_encode_decode/python/: encode_decode.py
06_server/node/: app.js  package.json
06_server/python/: main.py  pyproject.toml
08_Server_to_server_node/node/: app.js  package.json
09_Environment_Variables/: .env-dev
09_Environment_Variables/node/: index.js  package.json
10_Date/node/: date.js  exercise.js  package.json
10_Date/python/: date.py
11_Short_polling/node/: app.js  package-lock.json  package.json
12_Long_Polling/: package-lock.json  package.json
12_Long_Polling/node/: app.js
13_Server-Sent_Events/: index.html  package-lock.json  package.json
13_Server-Sent_Events/node/: app.js
13_Server-Sent_Events/python-sse/: pyproject.toml
15_Github_Webhooks/node-webhooks/: app.js  package.json
15_Github_Webhooks/python-webhooks/: main.py  pyproject.toml
16_Webhooks/node-websockets/: client.js  index.html  package.json  server.js
16_Webhooks/python-webhooks/: pyproject.toml
17_WHAT/: index.html
17_WHAT/node/: app.js  (+1 more)
17_WHAT/python-CORS/: main.py  pyproject.toml
18_multipart_forms/: index.html  nestedForms.html
27_Web_Scraping_Crawling/02_python/: main.py  pyproject.toml
27_Web_Scraping_Crawling/05_scrapy_wiki_crawler/: pyproject.toml
(+22 files in other folders)
