[tool.poetry]
name = "python-webhooks"
version = "0.1.0"
description = ""
authors = ["Mikkelrydahl <mikkel.oe@gamucatex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
