[tool.poetry]
name = "02-python"
version = "0.1.0"
description = ""
authors = ["Mikkelrydahl <mikkel.oe@gamucatex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
