[tool.poetry]
name = "05-scrapy-wiki-crawler"
version = "0.1.0"
description = ""
authors = ["Mikkelrydahl <mikkel.oe@gamucatex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
